# projet-mind

./: .gitattributes  .gitignore  pyproject.toml  setup.py
experiments/models/: CartPoleContinuous-v1-model-113.pt  CartPoleContinuous-v1-model-17.pt  CartPoleContinuous-v1-model-19.pt  CartPoleContinuous-v1-model-225.pt  CartPoleContinuous-v1-model-375.pt  CartPoleContinuous-v1-model-500.pt  CartPoleContinuous-v1-model-best.pt  LunarLander-v3-model-best.pt  MountainCarContinuous-v0-model-0.pt  MountainCarContinuous-v0-model-19.pt  MountainCarContinuous-v0-model-38.pt  MountainCarContinuous-v0-model-56.pt  MountainCarContinuous-v0-model-57.pt  MountainCarContinuous-v0-model-76.pt  MountainCarContinuous-v0-model-95.pt  MountainCarContinuous-v0-model-96.pt  MountainCarContinuous-v0-model-best.pt  Pendulum-v1-model--1177.pt  Pendulum-v1-model--1457.pt  Pendulum-v1-model--158.pt  Pendulum-v1-model--160.pt  Pendulum-v1-model--173.pt  Pendulum-v1-model--177.pt  Pendulum-v1-model--197.pt  Pendulum-v1-model--211.pt  Pendulum-v1-model--306.pt  Pendulum-v1-model--664.pt  Pendulum-v1-model--974.pt  Pendulum-v1-model-best.pt
experiments/notebooks/: 00-d3rlpy_tutorial.ipynb  00-sandbox.ipynb  00-test_algorithms.ipynb  00-test_uniform_sampling.ipynb  01-collect_replay_buffers.ipynb  01-pipeline_setup copy.ipynb  01-pipeline_setup.ipynb  02-run_all.ipynb  02-run_offline_learning.ipynb  03-learning_curves.ipynb  03-plot_learning_curves.ipynb  04-analyze_policies.ipynb  04-analyze_politics.ipynb  (+10 more)
notebooks/: 00-test_algorithms.ipynb  01-collect_replay_buffers.ipynb  02-run_offline_learning.ipynb  04-analyze_policies.ipynb
notebooks/tianshou-td3/: pyproject.toml  sac-test.ipynb
notes/: bibliography-initial.md
scripts/: cpu_usage.csv  kill_tmux.py  launch_all.py  run-offline-learning-noise.py  run-offline-learning.py
src/: 00-test_algorithms.ipynb  01-pipeline_setup.ipynb  config.yaml  pmind01-pipeline_setup.ipynb  pmind_utils.py  test_config.yaml
tianshou-td3/: td3-test.ipynb  uniform-buffers.ipynb
(+9064 files in other folders)
